--- a/index.html
+++ b/index.html
@@ -131,6 +131,74 @@
                     <div class="col-md-8">
                         <h3 class="title-big mb-sm-5 mb-4">最近更新</h3>
                         <div class="xcblog-blog-list">
+                                                        <div class="row xcblog-blog-item" data-date="2025-10-19">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2025-10-19-clash-windows.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/1694a934d953b0dc61fe40ac4034f27c.webp" alt="10月19日更新20.6M/S，2025年最新高速V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2025-10-19-clash-windows.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">10月19日更新20.6M/S，2025年最新高速V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了新加坡、欧洲、日本、加拿大、香港、韩国、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        10月19日                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row xcblog-blog-item" data-date="2025-10-18">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2025-10-18-clash-windows.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/3f1275233c413ecd16089d50a0615f3d.webp" alt="10月18日更新22.3M/S，2025年最新高速V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2025-10-18-clash-windows.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">10月18日更新22.3M/S，2025年最新高速V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了新加坡、韩国、欧洲、美国、加拿大、日本、香港等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        10月18日                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row xcblog-blog-item" data-date="2025-10-16">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2025-10-16-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="10月16日更新21.6M/S，2025年最新高速V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2025-10-16-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">10月16日更新21.6M/S，2025年最新高速V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了香港、新加坡、日本、韩国、欧洲、美国、加拿大等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        10月16日                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row xcblog-blog-item" data-date="2025-10-14">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2025-10-14-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/15f3c4212f40fda7ce92fc452dc790b7.webp" alt="10月14日更新20.1M/S，2025年最新高速Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2025-10-14-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">10月14日更新20.1M/S，2025年最新高速Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点订阅链接免费节点地址分享</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了欧洲、日本、韩国、香港、新加坡、加拿大、美国等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        10月14日                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row xcblog-blog-item" data-date="2025-10-13">
                                 <div class="col-lg-4">
                                     <div class="position-relative">
@@ -403,74 +471,6 @@
                                         9月22日                                    </p>
                                 </div>
                             </div>
-                                                        <div class="row xcblog-blog-item" data-date="2025-09-21">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2025-9-21-clash-node.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/80e1ae8826f43c44269c88a9b207db4c.webp" alt="9月21日更新22.3M/S，2025年最新高速V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2025-9-21-clash-node.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">9月21日更新22.3M/S，2025年最新高速V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了香港、韩国、美国、日本、新加坡、欧洲、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        9月21日                                    </p>
-                                </div>
-                            </div>
-                                                        <div class="row xcblog-blog-item" data-date="2025-09-20">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2025-9-20-clash-windows.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="9月20日更新22.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2025-9-20-clash-windows.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">9月20日更新22.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了加拿大、香港、欧洲、韩国、新加坡、美国、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        9月20日                                    </p>
-                                </div>
-                            </div>
-                                                        <div class="row xcblog-blog-item" data-date="2025-09-17">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2025-9-17-free-ssr-node.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="9月17日更新20.9M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2025-9-17-free-ssr-node.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">9月17日更新20.9M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了香港、韩国、欧洲、新加坡、日本、加拿大、美国等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        9月17日                                    </p>
-                                </div>
-                            </div>
-                                                        <div class="row xcblog-blog-item" data-date="2025-09-16">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2025-9-16-free-subscribe-node.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="9月16日更新21.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2025-9-16-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">9月16日更新21.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了新加坡、加拿大、欧洲、美国、韩国、日本、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        9月16日                                    </p>
-                                </div>
-                            </div>
                                                     </div>
                     </div>
                     <div class="col-md-4 w3l-services">
@@ -479,28 +479,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-10-9-free-clash.htm">10月9日更新21.8M/S，2025年最新高速Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、日本、欧洲、韩国、香港、美国等地区,最高速度可达21.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
                 <h4><a href="/free-nodes/2025-9-14-free-ssr-node.htm">9月14日更新18.4M/S，2025年最新高速SSR/Shadowrocket节点/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
                 <p>这一次的节点更新覆盖了韩国、加拿大、欧洲、美国、香港、日本、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-21-clash-node.htm">9月21日更新22.3M/S，2025年最新高速V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、美国、日本、新加坡、欧洲、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -519,8 +499,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-7-free-subscribe-node.htm">9月7日更新18.4M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、美国、香港、新加坡、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-27-free-node-subscribe.htm">9月27日更新21.2M/S，2025年最新高速Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、新加坡、美国、日本、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -529,8 +509,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-11-free-v2ray-subscribe.htm">9月11日更新20.1M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、美国、欧洲、韩国、新加坡、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-10-11-clash-node-daily-updates.htm">10月11日更新22.5M/S，2025年最新高速Singbox节点/Shadowrocket节点/V2ray节点/Clash节点/SSR节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、香港、韩国、欧洲、新加坡、日本等地区,最高速度可达22.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -539,8 +519,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-10-5-free-v2ray-subscribe.htm">10月5日更新18.2M/S，2025年最新高速V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、韩国、加拿大、香港等地区,最高速度可达18.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-24-free-ssr-node.htm">9月24日更新21.7M/S，2025年最新高速Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接|免费机场|免费梯子</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、欧洲、香港、韩国、加拿大、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -549,8 +529,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-15-free-shadowrocket-node.htm">9月15日更新19.6M/S，2025年最新高速SSR/Clash节点/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、加拿大、欧洲、韩国、美国、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-22-free-high-speed-nodes.htm">9月22日更新22.2M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、美国、香港、韩国、日本、加拿大、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-10-10-free-ssr-subscribe.htm">10月10日更新22.8M/S，2025年最新高速V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、加拿大、欧洲、韩国、美国、新加坡等地区,最高速度可达22.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -569,8 +559,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-16-free-subscribe-node.htm">9月16日更新21.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、欧洲、美国、韩国、日本、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-26-free-v2ray.htm">9月26日更新19.4M/S，2025年最新高速V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、加拿大、日本、香港、新加坡等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-10-16-free-shadowrocket-node.htm">10月16日更新21.6M/S，2025年最新高速V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、日本、韩国、欧洲、美国、加拿大等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -581,7 +581,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
                                 <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
                             </div>
         </div>
